release: BetterLANBroadcaster 1.0.2
Add full multilingual message support for English, Brazilian Portuguese, and Chinese

Standardize the [BetterLANBroadcaster] message prefix across all languages

Add runtime language loading, fallback to English, and formatted message placeholders

Improve broadcast lifecycle handling, reload, start/stop, and runtime reconfiguration

Add configurable network interface selection and automatic interface detection

Improve multicast broadcasting with IPv4 interface support and debug packet logging

Add configurable broadcast port and automatic Velocity port detection

Add MOTD placeholders and runtime configuration commands

Improve command messages, status output, help, version information, and validation errors

Add Java 21 and Velocity 3.4 compatibility

Update CI build workflow and GitHub release automation